<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon_attend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxuser"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/etx_login_user_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="email@address.com"
        app:layout_constraintBottom_toTopOf="@+id/etxpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.718" />

    <EditText
        android:id="@+id/etxpassword"
        android:autofillHints="password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/etx_login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginBottom="244dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="7dp"
        app:iconPadding="8dp"
        android:textColor="@color/light_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>