<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MemberView">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/Iv_view_member"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/list_member_item_img_desc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/Tv_view_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/Iv_view_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16sp"
        android:layout_marginTop="60sp"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="TitleMember"
        android:text="@string/hello_blank_fragment"/>

    <TextView
        android:id="@+id/Tv_view_attendances_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Iv_view_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/frag_view_member_Attendances_Title"
        android:textSize="20sp"
        android:padding="15sp"
        android:layout_marginStart="16sp"
        android:background="@color/blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>